--- a/conf/server.conf
+++ b/conf/server.conf
@@ -273,15 +273,19 @@ enable_commands [
     instaammo
     instahp
     defaultcc
-#   spawnhealth         ### Not working - To be fixed in next release
-#   spawnammo           ### Not working - To be fixed in next release
-#   spawnarmour         ### Not working - To be fixed in next release
+#   spawnhealth         ### Not working - To be fixed soon
+#   spawnammo           ### Not working - To be fixed soon
+#   spawnarmour         ### Not working - To be fixed soon
     botname
     instaarmour
     efficammomultipler
     adminleft
     resetinsta
     masterkicktime
+    login
+    register
+    setloginprivs
+#   loginpm             ### Not working - To be fixed soon
 ]
 
 disable_commands [
