--- a/conf/server.conf
+++ b/conf/server.conf
@@ -1,8 +1,8 @@
 ###############################################################################
 # Cube 2: Sauerbraten Game Server Configuration                               #
-# Based on HaythServ (which is based on SuckerServ)                              #
+# Based on SuckerServ (which is based on Hopmod)                              #
 #                                                                             #
-# Visit http://piernov.org/dokuwiki/en:haythserv:start for a full list of    #
+# Visit http://piernov.org/dokuwiki/en:haythserv:start for a full list of     #
 # configuration variables.                                                    #
 #                                                                             #
 ###############################################################################
@@ -283,8 +283,8 @@ enable_commands [
     resetinsta
     masterkicktime
     login
-    register
-    setloginprivs
+#   register		### Not working - To be fixed soon
+#   setloginprivs	### Not working - To be fixed soon
 #   loginpm             ### Not working - To be fixed soon
 ]
 
@@ -300,7 +300,7 @@ disable_commands [
 ###############################################################################
 
 module "stats"                                 # Record game statistics to a database (it is needed for the stats and names commands)
-module "login"                                                             # Allows people to register and login to the server
+#module "login"                                # Allows people to register and login to the server ### Not working - To be fixed soon
 
 module "display/ownage"                        # Display player achievement messages
 module "display/awards"                        # Show End Stats Game of ended map during the intermission
