--- a/conf/server.conf
+++ b/conf/server.conf
@@ -17,10 +17,10 @@ servername "^f3Running ^f5HaythServ"
 ###############################################################################
 
 # Server's IP address
-#serverip "0.0.0.0"
+# serverip "0.0.0.0"
 
 # Game server port.
-serverport 28785
+# serverport 28785
 
 # Register your server with the master server every 1 hour to appear on the public server list.
 publicserver 1
@@ -38,7 +38,7 @@ reserved_slots 5
 reserved_slots_password "" # Allow reserved slot usage without giving them admin privilege
 
 # Message of the day. This message is sent on player connection.
-motd (concat (red "Running") (magenta "HaythServ")
+motd (concat (red "Running") (magenta "HaythServ"))
 # The admin password. Same password used by all admin players to gain admin privilege, by typing /setmaster <admin_password>
 admin_password "wasd"
 
@@ -130,7 +130,7 @@ exec "conf/new_maps.conf"
 exec "conf/maps.conf"
 
 # The server's preferred game mode
-default_gamemode "insta ctf"
+default_gamemode "instagib"
 
 # Change back to the default game mode when the server goes empty
 default_game_on_empty 1
@@ -182,14 +182,15 @@ mapvote_disallow_excluded_map 0
 # Master restrictions
 ###############################################################################
 
-default_mastermode 2         # Change default mastermode
-allow_setmaster 0            # Allow /setmaster 1 command to be used for gaining master
-allow_mastermode_open 0      # Allow master to set open mastermode
-allow_mastermode_veto 0      # Allow master to set veto mastermode 
+mastermode 0                 # Default mastermode
+default_mastermode 0         # Change default mastermode
+allow_setmaster 1            # Allow /setmaster 1 command to be used for gaining master
+allow_mastermode_open 1      # Allow master to set open mastermode
+allow_mastermode_veto 1      # Allow master to set veto mastermode 
 allow_mastermode_locked 1    # Allow master to set locked mastermode
 allow_mastermode_private 0   # Allow master to set private mastermode
 allow_reconnect_with_private_mastermode 1 # Allow a player to reconnect when private mastermode is set
-reset_mastermode 0           # Reset mastermode when last master leaves / drops privileges
+reset_mastermode 1           # Reset mastermode when last master leaves / drops privileges
 
 ###############################################################################
 # Web admin configuration
@@ -279,7 +280,6 @@ enable_commands [
     botname
     instaarmour
     efficammomultipler
-    adminleft
     resetinsta
     masterkicktime
     login
@@ -317,7 +317,7 @@ module "detect/camping"                        # Name and shame players who are 
 #module "balance/server_size/by_gamemode"       # Increase/ Decrease server; depends on the current gamemode
 
 #module "override/gameduration"                 # Change the usual 10 minutes game duration to 15 minutes
-module "override/default_mastermode"            # Change the default mastermode (to locked by default)
+#module "override/default_mastermode"            # Change the default mastermode (to locked by default)
 
 module "recordgames"                           # Auto record demos of every game
 
