Fixes in login.lua and changes in server.conf

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -274,9 +274,9 @@ enable_commands [
     instaammo
     instahp
     defaultcc
-#   spawnhealth         ### Not working - To be fixed soon
-#   spawnammo           ### Not working - To be fixed soon
-#   spawnarmour         ### Not working - To be fixed soon
+	spawnhealth
+	spawnammo
+	spawnarmour
     botname
     instaarmour
     efficammomultipler
@@ -352,4 +352,3 @@ module "mapbattle"                             # Vote for map at intermission
 # Take the message's var you want customize from script/modules/declare/messages.vars
 # Exemple: There's a "global forgive_actor_forgiven_message" in messages.vars
 #          So the line to put here, for exemple, is → forgive_actor_forgiven_message (concat "You've been forgiven by" (blue "%s"))
-
