Fixed compilation errors

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -274,9 +274,9 @@ enable_commands [
     instaammo
     instahp
     defaultcc
-	spawnhealth
-	spawnammo
-	spawnarmour
+    spawnhealth
+#   spawnammo # still not working :\
+    spawnarmour
     botname
     instaarmour
     efficammomultipler
