Added root privileges

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -20,7 +20,7 @@ servername "^f3Running ^f5HaythServ"
 # serverip "0.0.0.0"
 
 # Game server port.
-# serverport 28785
+serverport 28785
 
 # Register your server with the master server every 1 hour to appear on the public server list.
 publicserver 1
@@ -39,6 +39,10 @@ reserved_slots_password "" # Allow reserved slot usage without giving them admin
 
 # Message of the day. This message is sent on player connection.
 motd (concat (red "Running") (magenta "HaythServ"))
+
+# Password to claim root.
+root_password "crackme"
+
 # The admin password. Same password used by all admin players to gain admin privilege, by typing /setmaster <admin_password>
 admin_password "wasd"
 
@@ -99,8 +103,8 @@ stats_query_backend mysql             # Used database : mysql, sqlite3, json, ps
 
 stats_mysql_hostname "localhost"      # MySQL server hostname
 stats_mysql_port "3306"               # MySQL server port
-stats_mysql_username "haythserv"     # MySQL database username
-stats_mysql_password "haythserv"     # MySQL database password
+stats_mysql_username "root"     # MySQL database username
+stats_mysql_password "120400"     # MySQL database password
 stats_mysql_database "haythserv"     # MySQL database name
 stats_mysql_install true              # Switch to false after first launch
 
