Several fixes for privilege ROOT

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -103,8 +103,8 @@ stats_query_backend mysql             # Used database : mysql, sqlite3, json, ps
 
 stats_mysql_hostname "localhost"      # MySQL server hostname
 stats_mysql_port "3306"               # MySQL server port
-stats_mysql_username "root"     # MySQL database username
-stats_mysql_password "120400"     # MySQL database password
+stats_mysql_username "haythserv"     # MySQL database username
+stats_mysql_password "haythserv"     # MySQL database password
 stats_mysql_database "haythserv"     # MySQL database name
 stats_mysql_install true              # Switch to false after first launch
 
