Added getpriv playercommand

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -290,6 +290,7 @@ enable_commands [
 #   register		### Not working - To be fixed soon
 #   setloginprivs	### Not working - To be fixed soon
 #   loginpm             ### Not working - To be fixed soon
+    getpriv
 ]
 
 disable_commands [
