--- a/conf/server.conf
+++ b/conf/server.conf
@@ -287,7 +287,7 @@ enable_commands [
     resetinsta
     masterkicktime
     login
-#   register		### Not working - To be fixed soon
+    register		
 #   setloginprivs	### Not working - To be fixed soon
 #   loginpm             ### Not working - To be fixed soon
     getpriv
