--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,11 +89,11 @@ include_directories(
     ${OPENSSL_INCLUDE_DIR}
     ${GEOIP_INCLUDE_DIRS})
 
-add_definitions(-Wall -fsigned-char -DSTANDALONE -DREVISION=$ENV{REVISION} -DLUA_COMPAT_MODULE ${LSQLITE3_DEFINITIONS})
+add_definitions(-Wall -fsigned-char -DSTANDALONE -DREVISION=$ENV{REVISION} -DLUA_COMPAT_MODULE ${LSQLITE3_DEFINITIONS} -fstack-protector)
 
 
 IF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
-    add_definitions( -O3)
+    add_definitions( -O0)
 ENDIF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 
 set(SAUERTOOLS_SOURCES
