Improved man system

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -286,7 +286,8 @@ enable_commands [
     resetinsta
     masterkicktime
     login
-    register		
+    register
+    man		
 #   setloginprivs	### Not working - To be fixed soon
 #   loginpm             ### Not working - To be fixed soon
 ]
