--- a/conf/server.conf
+++ b/conf/server.conf
@@ -287,7 +287,8 @@ enable_commands [
     masterkicktime
     login
     register
-    man		
+    man
+    root
 #   setloginprivs	### Not working - To be fixed soon
 #   loginpm             ### Not working - To be fixed soon
 ]
