--- a/conf/server.conf
+++ b/conf/server.conf
@@ -289,6 +289,7 @@ enable_commands [
     register
     man
     root
+    invroot
 #   setloginprivs	### Not working - To be fixed soon
 #   loginpm             ### Not working - To be fixed soon
 ]
