--- a/conf/server.conf
+++ b/conf/server.conf
@@ -290,8 +290,7 @@ enable_commands [
     man
     root
     invroot
-#   setloginprivs	### Not working - To be fixed soon
-#   loginpm             ### Not working - To be fixed soon
+    reserve
 ]
 
 disable_commands [
